kubernetes-back.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test

---

apiVersion: v1
kind: Service
metadata:
  namespace: test
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080  

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: $DOCKER_IMAGE_NAME_BACK:$BUILD_NUMBER
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "128Mi"
              cpu: "50m"

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: test
  name: backend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /admin
            pathType: Exact
            backend:
              serviceName: backend-service
              servicePort: 8080
          - path: / 
            pathType: Exact
            backend:
              serviceName: frontend-service
              servicePort: 80
